Recyclerview ama nekess chwaya Auth fih mochkla fel login (controle de saisie)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,27 @@
 
 
     <string name="app_name">astroFN</string>
-    <string name="text"> Cliquez ici.</string>
+    <string-array name="Liste_des_planetes" >
+        <item>Mercure</item>
+        <item>Venus</item>
+        <item>La terre</item>
+        <item>Mars</item>
+        <item>Jupiter</item>
+        <item>Saturne</item>
+        <item>Uranus</item>
+        <item>Neptun</item>
+        <item>Pluton</item>
+    </string-array>
+    <string-array name="informations">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+        <item>7</item>
+        <item>8</item>
+        <item>9</item>
+    </string-array>
 
 </resources>
