fragment mch kemlin

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
 
 
     <string name="app_name">astroFN</string>
-    <string-array name="Liste_des_planetes" >
+    <string-array name="Liste_des_planetes">
         <item>Mercure</item>
         <item>Venus</item>
         <item>La terre</item>
@@ -10,19 +10,21 @@
         <item>Jupiter</item>
         <item>Saturne</item>
         <item>Uranus</item>
-        <item>Neptun</item>
+        <item>Neptune</item>
         <item>Pluton</item>
     </string-array>
     <string-array name="informations">
-        <item>1</item>
-        <item>2</item>
-        <item>3</item>
-        <item>4</item>
-        <item>5</item>
-        <item>6</item>
-        <item>7</item>
-        <item>8</item>
+        <item>La plus petite planète de notre système solaire et la plus proche du Soleil..</item>
+        <item>De taille et de structure similaires à la Terre, Vénus a été appelée la jumelle de la Terre..</item>
+        <item>Notre planète natale est la troisième planète du Soleil..</item>
+        <item>Mars est un monde désertique poussiéreux, froid avec une atmosphère très mince..</item>
+        <item>Jupiter est, de loin, la plus grande planète du système solaire..</item>
+        <item>Saturne est la sixième planète du Soleil et la deuxième plus grande planète de notre système solaire.</item>
+        <item>Uranus a été découvert en 1781 par lastronome William Herschel, bien quil pensait à lorigine quil sagissait dune comète ou dune étoile</item>
+        <item>Sombre, froid et fouetté par des vents supersoniques</item>
         <item>9</item>
     </string-array>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
