fragment mch kemlin 2

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
         <item>Sombre, froid et fouetté par des vents supersoniques</item>
         <item>9</item>
     </string-array>
+    Locale.getDefault().getLanguage();
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
