--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
 
 
-    <string name="app_name">astroFN</string>
+    <string name="app_name" translatable="false">astroFN</string>
     <string-array name="Liste_des_planetes">
         <item>Mercure</item>
         <item>Venus</item>
@@ -32,8 +32,12 @@
             d une comète ou dune étoile</item>
         <item>Sombre, froid et fouetté par des vents supersoniques</item>
     </string-array>
+    <string name="title_activity_nav">MainActivity</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
     Locale.getDefault().getLanguage();
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 
 </resources>
